--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,14 @@
-FROM node:23-slim
+FROM node:20 AS build
 
 WORKDIR /app
-
-COPY . /app
-
+COPY package*.json ./
 RUN npm install
-
+COPY . .
 RUN npm run build
 
 FROM nginx:alpine
-COPY --from=0 /app/dist /usr/share/nginx/html
-
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
