--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "sqlite3": "^5.1.7"
   },
