--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.3",
     "path": "^0.12.7",
     "sqlite3": "^5.1.7"
   },
