--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,37 +4,41 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "3001:3001"  # HTTP
+      - "3001:3001"  # HTTP (apenas interno)
       - "3443:3443"  # HTTPS
     volumes:
       - ./database:/app/database
-      - ./ssl:/app/ssl  # Montar certificados SSL
+      - ./ssl:/app/ssl
     env_file:
       - ./backend/.env
     environment:
-      - DEBUG=True
+      - NODE_ENV=production
+      - DEBUG=False
       - DATABASE_URL=sqlite:///app/database/library.db
-      - NODE_EXTRA_CA_CERTS=/etc/ssl/certs/ca-certificates.crt
-      - NODE_OPTIONS=--use-openssl-ca
     user: "node"
     entrypoint: ["/bin/sh", "-c", "mkdir -p /app/database && node src/database/initDb.js && node src/main.js"]
+    
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "8080:80"  
+      - "80:80"    # HTTP (redirecionamento)
+      - "443:443"  # HTTPS
+    volumes:
+      - ./ssl:/etc/nginx/ssl  # Certificados SSL para Nginx
+      - ./nginx-https.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
+      
   cron:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    command: ["sh", "-c", "sleep 30 && while true; do node scripts/checkOverdues.js; sleep 86400; done"]
+    command: ["sh", "-c", "while true; do node scripts/checkOverdues.js; sleep 86400; done"]
     volumes:
       - ./database:/app/database
     environment:
       - DATABASE_URL=sqlite:///app/database/library.db
-      - SQLITE_BUSY_TIMEOUT=30000
     depends_on:
       - backend
