Primeira versao VirtualBookShelf

--- a/nginx-https.conf
+++ b/nginx-https.conf
@@ -10,7 +10,7 @@ server {
 
     # Certificados SSL
     ssl_certificate /etc/nginx/ssl/certificate.crt;
-    ssl_private_key /etc/nginx/ssl/private.key;
+    ssl_certificate_key /etc/nginx/ssl/private.key;
     
     # Configurações SSL recomendadas
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -28,6 +28,41 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
+
+    # Servir arquivos PWA e estáticos específicos
+    location = /manifest.json {
+        try_files $uri =404;
+        add_header Content-Type application/manifest+json;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        access_log off;
+    }
+    
+    location = /service-worker.js {
+        try_files $uri =404;
+        add_header Content-Type application/javascript;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma no-cache;
+        add_header Expires 0;
+        access_log off;
+    }
+    
+    location = /pwa-installer.js {
+        try_files $uri =404;
+        add_header Content-Type application/javascript;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        access_log off;
+    }
+    
+    location = /browserconfig.xml {
+        try_files $uri =404;
+        add_header Content-Type application/xml;
+        access_log off;
+    }
+    
+    location ~* ^/(robots.txt|favicon.ico)$ {
+        try_files $uri =404;
+        access_log off;
+    }
 
     # Configurar frontend
     location / {
