--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "bcrypt": "^6.0.0",
+    "bwip-js": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.3",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
