--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -77,16 +77,16 @@ server {
 
     # Proxy para backend
     location /api/ {
-        proxy_pass https://backend:3443;
+        proxy_pass http://backend:3001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
         # Configurações para WebSocket se necessário
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+    }
     }
 
     # Logs
