--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,7 +1,33 @@
 server {
     listen 80;
     server_name localhost;
-    return 301 https://$server_name$request_uri;
+    
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Configurar frontend
+    location / {
+        try_files $uri $uri/ /index.html;
+        
+        # Cache para assets estáticos
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+    }
+
+    # Proxy para backend
+    location /api/ {
+        proxy_pass http://backend:3001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        # Configurações para WebSocket se necessário
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
 }
 
 server {
@@ -75,9 +101,9 @@ server {
         }
     }
 
-    # Proxy para backend
+    # Proxy para backend HTTPS
     location /api/ {
-        proxy_pass http://backend:3001;
+        proxy_pass https://backend:3443;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -86,7 +112,8 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-    }
+        # Ignorar certificados SSL do backend (para desenvolvimento)
+        proxy_ssl_verify off;
     }
 
     # Logs
