--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    server_name localhost;
-    
+    server_name bibliotecamoleculares.com;
+
     root /usr/share/nginx/html;
     index index.html;
 
