--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   backend:
     build:
@@ -5,7 +7,6 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3001:3001"
-      - "3443:3443"
     volumes:
       - ./backend:/app/backend
       - ./database:/app/database
@@ -13,25 +14,26 @@ services:
     env_file:
       - ./backend/.env
     environment:
-      - FRONTEND_URL=http://52.67.57.177:8080
+      - FRONTEND_URL=https://bibliotecamoleculares.com
       - DEBUG=True
       - DATABASE_URL=sqlite:///app/database/library.db
       - NODE_EXTRA_CA_CERTS=/etc/ssl/certs/ca-certificates.crt
       - NODE_OPTIONS=--use-openssl-ca
     user: "node"
     entrypoint: ["/bin/sh", "-c", "mkdir -p /app/database && node src/database/initDb.js && node src/main.js"]
+
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "8080:80"
-      - "8443:443"
+      - "443:443"
     volumes:
       - ./frontend:/app/frontend
       - ./ssl:/etc/nginx/ssl
     depends_on:
       - backend
+
   cron:
     build:
       context: ./backend
