--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,5 @@
+# Dockerfile do frontend
+
 FROM node:20 AS build
 
 WORKDIR /app
@@ -7,9 +9,14 @@ COPY . .
 RUN npm run build
 
 FROM nginx:alpine
+
+# Copia os arquivos de build
 COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copia os certificados SSL e configurações do nginx
+COPY ./ssl /etc/nginx/ssl
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
+
 EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
