--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,40 +1,20 @@
 server {
     listen 80;
-    server_name bibliotecamoleculares.com;
+    server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    root /usr/share/nginx/html;
-    index index.html;
-
-    # Configurar frontend
+    # Redireciona todo HTTP para HTTPS
     location / {
-        try_files $uri $uri/ /index.html;
-        # Cache para assets estáticos
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-    }
-
-    # Proxy para backend
-    location /api/ {
-        proxy_pass http://backend:3001;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        # Configurações para WebSocket se necessário
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        return 301 https://$host$request_uri;
     }
 }
 
 server {
     listen 443 ssl http2;
-    server_name bibliotecamoleculares.com;
+    server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    ssl_certificate /etc/nginx/ssl/certificate.crt;
-    ssl_certificate_key /etc/nginx/ssl/private.key;
+    # Certificados Let's Encrypt
+    ssl_certificate /etc/nginx/ssl/live/bibliotecamoleculares.com/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/bibliotecamoleculares.com/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
@@ -42,6 +22,7 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
+    # Segurança extra
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Content-Type-Options nosniff;
     add_header X-Frame-Options DENY;
@@ -51,11 +32,13 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Manifest
     location = /manifest.json {
         try_files $uri =404;
         add_header Content-Type application/manifest+json;
     }
 
+    # Service Worker
     location = /service-worker.js {
         try_files $uri =404;
         add_header Content-Type application/javascript;
@@ -64,15 +47,16 @@ server {
         add_header Expires 0;
     }
 
+    # Frontend
     location / {
         try_files $uri $uri/ /index.html;
-
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
     }
 
+    # Backend API
     location /api/ {
         proxy_pass http://backend:3001;
         proxy_http_version 1.1;
@@ -85,5 +69,3 @@ server {
     }
 
     access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-}
