--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,11 +2,17 @@ server {
     listen 80;
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    # Redireciona todo HTTP para HTTPS
+    # Permitir validação do Certbot via HTTP
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Redireciona o resto para HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
 }
+
 
 server {
     listen 443 ssl http2;
