--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,39 +2,40 @@ server {
     listen 80;
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    # Permitir validação do Certbot via HTTP
+    # Permitir validação HTTP do Certbot
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Redireciona o resto para HTTPS
+    # Redireciona tudo para HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
 }
 
-
 server {
     listen 443 ssl http2;
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    # Certificados Let's Encrypt
-    ssl_certificate /etc/nginx/ssl/live/bibliotecamoleculares.com/fullchain.pem;
+    # Caminhos dos certificados Let's Encrypt
+    ssl_certificate     /etc/nginx/ssl/live/bibliotecamoleculares.com/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/bibliotecamoleculares.com/privkey.pem;
 
+    # Configurações de segurança TLS
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
-    # Segurança extra
+    # Headers de segurança recomendados
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Content-Type-Options nosniff;
     add_header X-Frame-Options DENY;
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
 
+    # Diretório raiz (frontend)
     root /usr/share/nginx/html;
     index index.html;
 
@@ -53,16 +54,18 @@ server {
         add_header Expires 0;
     }
 
-    # Frontend
+    # Frontend estático
     location / {
         try_files $uri $uri/ /index.html;
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
     }
 
-    # Backend API
+    # Cache para assets estáticos
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Proxy para backend API
     location /api/ {
         proxy_pass http://backend:3001;
         proxy_http_version 1.1;
@@ -74,4 +77,7 @@ server {
         proxy_set_header Connection "upgrade";
     }
 
+    # Logs
     access_log /var/log/nginx/access.log;
+    error_log  /var/log/nginx/error.log;
+}
