--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+    dockerfile: Dockerfile
     ports:
       - "443:443"
     volumes:
@@ -44,3 +44,13 @@ services:
       - SQLITE_BUSY_TIMEOUT=30000
     depends_on:
       - backend
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./ssl:/etc/letsencrypt
+      - ./frontend:/var/www/certbot
+    command: >
+      sh -c "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot && sleep 86400; done"
+    depends_on:
+      - frontend
