--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,12 +23,13 @@ services:
   frontend:
     build:
       context: ./frontend
-    dockerfile: Dockerfile
+      dockerfile: Dockerfile
     ports:
+      - "80:80"
       - "443:443"
     volumes:
-      - ./frontend:/app/frontend
-      - ./ssl:/etc/nginx/ssl
+      - ./ssl:/etc/letsencrypt
+      - ./frontend:/var/www/certbot
     depends_on:
       - backend
 
@@ -51,6 +52,6 @@ services:
       - ./ssl:/etc/letsencrypt
       - ./frontend:/var/www/certbot
     command: >
-      sh -c "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot && sleep 86400; done"
+      sh -c "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot && nginx -s reload; sleep 86400; done"
     depends_on:
       - frontend
