--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,7 +7,7 @@ server {
         root /var/www/certbot;
     }
 
-    # Redireciona tudo para HTTPS
+    # Redirecionar tudo para HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
@@ -18,24 +18,22 @@ server {
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
     # Caminhos dos certificados Let's Encrypt
-    ssl_certificate     /etc/nginx/ssl/live/bibliotecamoleculares.com/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/bibliotecamoleculares.com/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/bibliotecamoleculares.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bibliotecamoleculares.com/privkey.pem;
 
-    # Configurações de segurança TLS
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
-    # Headers de segurança recomendados
+    # Headers de segurança
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Content-Type-Options nosniff;
     add_header X-Frame-Options DENY;
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
 
-    # Diretório raiz (frontend)
     root /usr/share/nginx/html;
     index index.html;
 
@@ -59,13 +57,13 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache para assets estáticos
+    # Cache para arquivos estáticos
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # Proxy para backend API
+    # Proxy para a API
     location /api/ {
         proxy_pass http://backend:3001;
         proxy_http_version 1.1;
@@ -77,7 +75,6 @@ server {
         proxy_set_header Connection "upgrade";
     }
 
-    # Logs
     access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log;
 }
