--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,13 +2,52 @@ server {
     listen 80;
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    # Permitir validação HTTP do Certbot
+    # Caminho para validação do Certbot
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Redirecionar tudo para HTTPS
+    # Frontend estático
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
-        return 301 https://$host$request_uri;
+        try_files $uri $uri/ /index.html;
     }
+
+    # Manifest
+    location = /manifest.json {
+        try_files $uri =404;
+        add_header Content-Type application/manifest+json;
+    }
+
+    # Service Worker
+    location = /service-worker.js {
+        try_files $uri =404;
+        add_header Content-Type application/javascript;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma no-cache;
+        add_header Expires 0;
+    }
+
+    # Cache para arquivos estáticos
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Proxy para a API
+    location /api/ {
+        proxy_pass http://backend:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    access_log /var/log/nginx/access.log;
+    error_log  /var/log/nginx/error.log;
 }
