--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,26 +2,25 @@ server {
     listen 80;
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    # Caminho para validação do Certbot
+    # ✅ Pasta usada pelo Certbot para o desafio ACME (não altere)
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Frontend estático
-    root /usr/share/nginx/html;
-    index index.html;
-
+    # 🧱 Frontend estático (sem HTTPS por enquanto)
     location / {
+        root /usr/share/nginx/html;
+        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # Manifest
+    # 📦 Manifesto do PWA
     location = /manifest.json {
         try_files $uri =404;
         add_header Content-Type application/manifest+json;
     }
 
-    # Service Worker
+    # 🛠️ Service Worker
     location = /service-worker.js {
         try_files $uri =404;
         add_header Content-Type application/javascript;
@@ -30,13 +29,13 @@ server {
         add_header Expires 0;
     }
 
-    # Cache para arquivos estáticos
+    # 🖼️ Cache de arquivos estáticos
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # Proxy para a API
+    # 🔁 Proxy para backend API
     location /api/ {
         proxy_pass http://backend:3001;
         proxy_http_version 1.1;
