--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,19 +20,6 @@ services:
     user: "node"
     entrypoint: ["/bin/sh", "-c", "mkdir -p /app/database && node src/database/initDb.js && node src/main.js"]
 
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./ssl:/etc/letsencrypt
-      - ./frontend:/var/www/certbot
-    depends_on:
-      - backend
-
   cron:
     build:
       context: ./backend
@@ -46,12 +33,27 @@ services:
     depends_on:
       - backend
 
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./ssl:/etc/letsencrypt
-      - ./frontend:/var/www/certbot
-    command: >
-      sh -c "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot && nginx -s reload; sleep 86400; done"
-    depends_on:
-      - frontend
+frontend:
+  build:
+    context: ./frontend
+    dockerfile: Dockerfile
+  ports:
+    - "80:80"
+    - "443:443"
+  volumes:
+    - ./ssl:/etc/letsencrypt
+    - ./certbot/www:/var/www/certbot  # ⬅️ separa a pasta do certbot
+    - ./nginx.conf:/etc/nginx/conf.d/default.conf
+  depends_on:
+    - backend
+
+certbot:
+  image: certbot/certbot
+  volumes:
+    - ./ssl:/etc/letsencrypt
+    - ./certbot/www:/var/www/certbot  # ⬅️ mesma pasta do frontend
+  command: >
+    sh -c "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot && nginx -s reload; sleep 86400; done"
+  depends_on:
+    - frontend
+
