--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   backend:
     build:
@@ -33,27 +35,26 @@ services:
     depends_on:
       - backend
 
-frontend:
-  build:
-    context: ./frontend
-    dockerfile: Dockerfile
-  ports:
-    - "80:80"
-    - "443:443"
-  volumes:
-    - ./ssl:/etc/letsencrypt
-    - ./certbot/www:/var/www/certbot  # ⬅️ separa a pasta do certbot
-    - ./nginx.conf:/etc/nginx/conf.d/default.conf
-  depends_on:
-    - backend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./ssl:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - backend
 
-certbot:
-  image: certbot/certbot
-  volumes:
-    - ./ssl:/etc/letsencrypt
-    - ./certbot/www:/var/www/certbot  # ⬅️ mesma pasta do frontend
-  command: >
-    sh -c "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot && nginx -s reload; sleep 86400; done"
-  depends_on:
-    - frontend
-
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./ssl:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: >
+      sh -c "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot && nginx -s reload; sleep 86400; done"
+    depends_on:
+      - frontend
