--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,25 +2,48 @@ server {
     listen 80;
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    # ✅ Pasta usada pelo Certbot para o desafio ACME (não altere)
+    # Permitir validação HTTP do Certbot
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # 🧱 Frontend estático (sem HTTPS por enquanto)
+    # Redirecionar tudo para HTTPS
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+        return 301 https://$host$request_uri;
     }
+}
 
-    # 📦 Manifesto do PWA
+server {
+    listen 443 ssl http2;
+    server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
+
+    # Caminhos dos certificados Let's Encrypt
+    ssl_certificate     /etc/letsencrypt/live/bibliotecamoleculares.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bibliotecamoleculares.com/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    # Headers de segurança
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options DENY;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Referrer-Policy "strict-origin-when-cross-origin";
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Manifest
     location = /manifest.json {
         try_files $uri =404;
         add_header Content-Type application/manifest+json;
     }
 
-    # 🛠️ Service Worker
+    # Service Worker
     location = /service-worker.js {
         try_files $uri =404;
         add_header Content-Type application/javascript;
@@ -29,13 +52,18 @@ server {
         add_header Expires 0;
     }
 
-    # 🖼️ Cache de arquivos estáticos
+    # Frontend estático
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Cache para arquivos estáticos
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # 🔁 Proxy para backend API
+    # Proxy para a API
     location /api/ {
         proxy_pass http://backend:3001;
         proxy_http_version 1.1;
