--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,26 +1,29 @@
+# Redirecionamento HTTP para HTTPS + ACME challenge
 server {
     listen 80;
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    # Permitir validação HTTP do Certbot
+    # Permitir validação do Certbot
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Redirecionar tudo para HTTPS
+    # Redirecionar todo o restante para HTTPS
     location / {
         return 301 https://$host$request_uri;
     }
 }
 
+# Servidor HTTPS
 server {
     listen 443 ssl http2;
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    # Caminhos dos certificados Let's Encrypt
-    ssl_certificate     /etc/letsencrypt/live/bibliotecamoleculares.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/bibliotecamoleculares.com/privkey.pem;
+    # Certificados Let's Encrypt (corrigido com o sufixo -0001)
+    ssl_certificate     /etc/letsencrypt/live/bibliotecamoleculares.com-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bibliotecamoleculares.com-0001/privkey.pem;
 
+    # SSL config
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
@@ -34,10 +37,11 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
 
+    # Diretório raiz
     root /usr/share/nginx/html;
     index index.html;
 
-    # Manifest
+    # Manifesto PWA
     location = /manifest.json {
         try_files $uri =404;
         add_header Content-Type application/manifest+json;
@@ -52,18 +56,18 @@ server {
         add_header Expires 0;
     }
 
-    # Frontend estático
+    # App frontend
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache para arquivos estáticos
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    # Arquivos estáticos (com cache longo)
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # Proxy para a API
+    # Proxy para backend (API)
     location /api/ {
         proxy_pass http://backend:3001;
         proxy_http_version 1.1;
