Email de criacao de senha v3

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,8 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm install vite-plugin-static-copy --save-dev
 RUN npm run build
+RUN cp public/sitemap.xml dist/sitemap.xml
 
 FROM nginx:alpine
 
