--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -19,7 +19,7 @@
       "url": "/books",
       "icons": [
         {
-          "src": "/images/icon-192x192.png",
+          "src": "/images/LogoBrancoBiblioteca.png",
           "sizes": "192x192",
           "type": "image/png"
         }
