--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -28,25 +28,25 @@
   ],
   "icons": [
     {
-      "src": "/images/icon-192x192.png",
+      "src": "/images/LogoBrancoBiblioteca.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/icon-192x192.png",
+      "src": "/images/LogoBrancoBiblioteca.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/images/icon-512x512.png",
+      "src": "/images/LogoBrancoBiblioteca.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/icon-512x512.png",
+      "src": "/images/LogoBrancoBiblioteca.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
