Edicao de email v3

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -56,6 +56,18 @@ server {
         add_header Expires 0;
     }
 
+
+    # Imagens públicas
+    location /images/ {
+        alias /usr/share/nginx/html/images/;
+        access_log off;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        add_header Content-Type "";
+        try_files $uri $uri/ =404;
+        autoindex off;
+    }
+
     # App frontend
     location / {
         try_files $uri $uri/ /index.html;
