Melhorias no db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,15 +24,27 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    command: ["sh", "-c", "sleep 30 && while true; do node scripts/checkOverdues.js; sleep 86400; done"]
+    entrypoint: ["/bin/sh", "-c", "apt-get update && apt-get install -y tzdata && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && sleep 30 && while true; do node scripts/checkOverdues.js; sleep 86400; done"]
     volumes:
       - ./database:/app/database
     environment:
       - DATABASE_URL=sqlite:///app/database/library.db
       - SQLITE_BUSY_TIMEOUT=30000
+      - TZ=America/Sao_Paulo
     depends_on:
       - backend
 
+  backup:
+    image: ubuntu:latest
+    volumes:
+      - ./database:/app/database
+      - ./scripts:/app/scripts
+    environment:
+      - GDRIVE_FOLDER_ID=1eCEzS0-vCnmKxin4MUpqDj-QWA28klit
+      - TZ=America/Sao_Paulo
+    entrypoint: ["/bin/sh", "-c", "apt-get update && apt-get install -y wget curl tzdata && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && wget -O /usr/local/bin/gdrive https://github.com/prasmussen/gdrive/releases/download/2.1.0/gdrive-linux-x64 && chmod +x /usr/local/bin/gdrive && while true; do /app/scripts/backup_db_to_gdrive.sh; sleep 86400; done"]
+    depends_on:
+      - backend
   frontend:
     build:
       context: ./frontend
