entrypoint para certificados autoassinados

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,9 +19,9 @@ server {
     listen 443 ssl http2;
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
-    # Certificados Let's Encrypt (corrigido com o sufixo -0001)
-    ssl_certificate     /etc/letsencrypt/live/bibliotecamoleculares.com-0001/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/bibliotecamoleculares.com-0001/privkey.pem;
+    # Certificados Let's Encrypt ou autoassinados
+    ssl_certificate     /etc/letsencrypt/certificate.crt;
+    ssl_certificate_key /etc/letsencrypt/private.key;
 
     # SSL config
     ssl_protocols TLSv1.2 TLSv1.3;
