--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,6 @@ services:
     volumes:
       - ./ssl:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    command: >
-      sh -c "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot && nginx -s reload; sleep 86400; done"
+    entrypoint: ["/bin/sh", "-c", "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot; sleep 86400; done"]
     depends_on:
       - frontend
