entrypoint para certificados autoassinados; correção de permissões v5

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -20,8 +20,8 @@ server {
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
     # Certificados Let's Encrypt ou autoassinados
-    ssl_certificate     /etc/letsencrypt/certificate.crt;
-    ssl_certificate_key /etc/letsencrypt/private.key;
+    ssl_certificate     /etc/letsencrypt/live/bibliotecamoleculares.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bibliotecamoleculares.com/privkey.pem;
 
     # SSL config
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -55,7 +55,6 @@ server {
         add_header Pragma no-cache;
         add_header Expires 0;
     }
-
 
     # Imagens públicas
     location /images/ {
