--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,4 @@
-# Dockerfile do frontend
-
+# Etapa de build do frontend
 FROM node:22 AS build
 
 WORKDIR /app
@@ -10,17 +9,25 @@ COPY . .
 RUN npm run build
 RUN cp public/sitemap.xml dist/sitemap.xml
 
+# Etapa final com Nginx
 FROM nginx:1.27-alpine
 
-# Copia os arquivos de build
+# Instalar openssl para gerar certificado
+RUN apk add --no-cache openssl
+
+# Criar pasta para certificados
+RUN mkdir -p /etc/letsencrypt
+
+# Copia os arquivos de build do frontend
 COPY --from=build /app/dist /usr/share/nginx/html
 
+# Copia a config do Nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-EXPOSE 443
-
-# Adiciona o entrypoint customizado
+# Copia o entrypoint customizado
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+
+EXPOSE 443
 
 CMD ["/entrypoint.sh"]
