--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -20,8 +20,8 @@ server {
     server_name bibliotecamoleculares.com www.bibliotecamoleculares.com;
 
     # Certificados Let's Encrypt ou autoassinados
-    ssl_certificate     /etc/letsencrypt/live/bibliotecamoleculares.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/bibliotecamoleculares.com/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/certificate.crt;
+    ssl_certificate_key /etc/letsencrypt/private.key;
 
     # SSL config
     ssl_protocols TLSv1.2 TLSv1.3;
