--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - ./backend:/app/backend
       - ./database:/app/database
       - ./ssl:/app/ssl
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     env_file:
       - ./backend/.env
     environment:
