--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,11 +5,11 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3001:3001"
-      - "3443:3443"  # Porta HTTPS para desenvolvimento
+      - "3443:3443"  
     volumes:
       - ./backend:/app/backend
       - ./database:/app/database
-      - ./ssl-dev:/app/ssl  # Usando certificados de desenvolvimento
+      - ./ssl-dev:/app/ssl 
     env_file:
       - ./backend/.env
     environment:
@@ -18,7 +18,7 @@ services:
       - DATABASE_URL=sqlite:///app/database/library.db
       - NODE_EXTRA_CA_CERTS=/etc/ssl/certs/ca-certificates.crt
       - NODE_OPTIONS=--use-openssl-ca
-      - NODE_ENV=development  # Importante para desenvolvimento
+      - NODE_ENV=development 
     entrypoint: ["/bin/sh", "-c", "mkdir -p /app/database && node src/database/initDb.js && node src/main.js"]
 
   frontend:
@@ -28,8 +28,8 @@ services:
     container_name: biblioteca-frontend-dev
     ports:
       - "3000:80"
-      - "3444:443"  # Porta diferente para evitar conflito
+      - "3444:443" 
     volumes:
-      - ./ssl-dev:/etc/letsencrypt  # Usando certificados de desenvolvimento
+      - ./ssl-dev:/etc/letsencrypt  
     depends_on:
       - backend
