--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -24,10 +24,6 @@ COPY --from=build /app/dist /usr/share/nginx/html
 # Copia a config do Nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copia o entrypoint customizado
-COPY entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-
 EXPOSE 443
 
-CMD ["/entrypoint.sh"]
+CMD ["nginx", "-g", "daemon off;"]
