--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,8 @@ services:
     volumes:
       - ./ssl:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    entrypoint: ["/bin/sh", "-c", "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot && docker exec biblioteca-frontend nginx -s reload; sleep 86400; done"]
+      - ./scripts:/scripts
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    entrypoint: ["/bin/sh", "-c", "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot --deploy-hook '/scripts/certbot-renewal-hook.sh' && docker exec biblioteca-frontend nginx -s reload; sleep 86400; done"]
     depends_on:
       - frontend
