--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "echo 'skip build'",
     "dev": "nodemon src/main.js",
     "init-db": "node initDb.js",
-    "migrate:extension": "node scripts/migrate_extension_flow.js"
+    "migrate:extension": "node scripts/migrate_extension_flow.js",
+    "migrate:add-user-class": "node scripts/migrate_add_user_class.js"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
@@ -17,7 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.3",
     "path": "^0.12.7",
