--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    entrypoint: ["/bin/sh", "-c", "apt-get update && apt-get install -y tzdata && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && sleep 30 && while true; do node scripts/checkOverdues.js; sleep 86400; done"]
+    entrypoint: ["/bin/sh", "-c", "apt-get update && apt-get install -y tzdata && ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && echo $${TZ} > /etc/timezone && sleep 30 && while true; do node scripts/checkOverdues.js; sleep 86400; done"]
     volumes:
       - ./database:/app/database
     environment:
@@ -42,7 +42,7 @@ services:
     environment:
       - GDRIVE_FOLDER_ID=1eCEzS0-vCnmKxin4MUpqDj-QWA28klit
       - TZ=America/Sao_Paulo
-    entrypoint: ["/bin/sh", "-c", "apt-get update && apt-get install -y wget curl tzdata rclone jq && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && while true; do /app/scripts/backup_db_to_gdrive.sh; sleep 86400; done"]
+    entrypoint: ["/bin/sh", "-c", "apt-get update && apt-get install -y wget curl tzdata rclone jq && ln -snf /usr/share/zoneinfo/$${TZ} /etc/localtime && echo $${TZ} > /etc/timezone && while true; do bash /app/scripts/backup_db_to_gdrive.sh; sleep 86400; done"]
     depends_on:
       - backend
   frontend:
