--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -24,6 +24,10 @@ COPY --from=build /app/dist /usr/share/nginx/html
 # Copia a config do Nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
+# Copia o script de inicialização SSL
+COPY init-ssl.sh /usr/local/bin/init-ssl.sh
+RUN chmod +x /usr/local/bin/init-ssl.sh
+
 EXPOSE 443
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["/usr/local/bin/init-ssl.sh"]
