--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,7 @@
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
     "sqlite3": "^5.1.7",
-    "imap-simple": "^5.1.0",
-    "mailparser": "^3.8.0"
+    "imap-simple": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
