--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,10 +63,9 @@ services:
   certbot:
     image: certbot/certbot
     volumes:
-      - ./ssl:/etc/letsencrypt
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/lib/letsencrypt:/var/lib/letsencrypt
       - ./certbot/www:/var/www/certbot
-      - ./scripts:/scripts
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-    entrypoint: ["/bin/sh", "-c", "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot --deploy-hook '/scripts/certbot-renewal-hook.sh' && docker exec biblioteca-frontend nginx -s reload; sleep 86400; done"]
+    entrypoint: ["/bin/sh", "-c", "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot --quiet; sleep 86400; done"]
     depends_on:
       - frontend
