--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,12 +60,14 @@ services:
       - backend
 
 
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - /var/lib/letsencrypt:/var/lib/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: ["/bin/sh", "-c", "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot --quiet; sleep 86400; done"]
-    depends_on:
-      - frontend
+  # Container certbot desabilitado - renovação agora é feita via cronjob do sistema
+  # usando certbot standalone (mais confiável)
+  # certbot:
+  #   image: certbot/certbot
+  #   volumes:
+  #     - /etc/letsencrypt:/etc/letsencrypt
+  #     - /var/lib/letsencrypt:/var/lib/letsencrypt
+  #     - ./certbot/www:/var/www/certbot
+  #   entrypoint: ["/bin/sh", "-c", "trap exit TERM; while true; do certbot renew --webroot -w /var/www/certbot --quiet; sleep 86400; done"]
+  #   depends_on:
+  #     - frontend
