--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "axios": "^1.6.5",
     "bcrypt": "^6.0.0",
     "bwip-js": "^4.6.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
