--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "start": "node src/database/initDb.js && node src/main.js",
     "build": "echo 'skip build'",
     "dev": "nodemon src/main.js",
-    "init-db": "node initDb.js"
+    "init-db": "node initDb.js",
+    "scrape:disciplines": "node scripts/scrapeUSPDisciplines.js",
+    "scrape:disciplines:test": "node scripts/scrapeUSPDisciplines.js -u 45 -v --dry-run"
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
