--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,13 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "fs": "0.0.1-security",
+    "iconv-lite": "^0.6.3",
+    "imap-simple": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.3",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
-    "sqlite3": "^5.1.7",
-    "imap-simple": "^5.1.0"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
