feat: add developer automation scripts and update README- Add interactive development menu (start-dev.sh) with 6 modes- Add global aliases setup script (setup-aliases.sh)- Add quick git workflow script (save.sh)- Add aliases display helper (show-aliases.sh)- Update start-production.sh with docker prune- Update README with comprehensive scripts documentation- Add npm scripts for common tasks (dev, seed, backup, etc)

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
     "start": "node src/database/initDb.js && node src/main.js",
     "build": "echo 'skip build'",
     "dev": "nodemon src/main.js",
-    "init-db": "node initDb.js",
+    "init-db": "node src/database/initDb.js",
     "seed": "node scripts/seed_database.js",
+    "import:csv": "node scripts/importCsv.js",
+    "clean:test": "node scripts/clean_test_scenarios.js",
     "scrape:disciplines": "node scripts/scrapeUSPDisciplines.js",
     "scrape:disciplines:test": "node scripts/scrapeUSPDisciplines.js -u 45 -v --dry-run"
   },
