--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "iconv-lite": "^0.6.3",
     "imap-simple": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.3",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
