--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^7.0.3",
     "path": "^0.12.7",
     "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
