--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "formdata-node": "^6.0.3",
     "fs": "0.0.1-security",
     "iconv-lite": "^0.6.3",
     "imap-simple": "^5.1.0",
