--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "csv-parser": "^3.2.0",
     "formdata-node": "^6.0.3",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.562.0",
     "undici": "^7.18.2",
     "web-file-polyfill": "^1.0.4"
   }
