--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formdata-node": "^6.0.3",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.562.0",
+    "react-easy-crop": "^5.5.6",
     "undici": "^7.18.2",
     "web-file-polyfill": "^1.0.4"
   }
