--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -56,7 +56,20 @@ server {
         add_header Expires 0;
     }
 
-    # Imagens públicas
+    # Imagens de usuários (proxy para backend)
+    location /images/user-images/ {
+        proxy_pass http://backend:3001/images/user-images/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        access_log off;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Outras imagens públicas (servidas do frontend)
     location /images/ {
         alias /usr/share/nginx/html/images/;
         access_log off;
