--- a/frontend/nginx.dev.conf
+++ b/frontend/nginx.dev.conf
@@ -14,6 +14,14 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Imagens de usuários (proxy para backend)
+    location /images/user-images/ {
+        proxy_pass http://backend:3001/images/user-images/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        access_log off;
+    }
+
     # Proxy para backend (API) via HTTP
     location /api/ {
         proxy_pass http://backend:3001;
@@ -60,7 +68,20 @@ server {
         add_header Expires 0;
     }
 
-    # Imagens públicas
+    # Imagens de usuários (proxy para backend)
+    location /images/user-images/ {
+        proxy_pass http://backend:3001/images/user-images/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        access_log off;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Outras imagens públicas (servidas do frontend)
     location /images/ {
         alias /usr/share/nginx/html/images/;
         access_log off;
@@ -70,7 +91,6 @@ server {
         try_files $uri $uri/ =404;
         autoindex off;
     }
-
 
     # Arquivos estáticos (com cache longo)
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
