--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -19,7 +19,7 @@
       "url": "/books",
       "icons": [
         {
-          "src": "/images/logos/logoFundoBrancoBiblioteca.png",
+          "src": "/images/logos/flavicon.png",
           "sizes": "192x192",
           "type": "image/png"
         }
@@ -28,25 +28,25 @@
   ],
   "icons": [
     {
-      "src": "/images/logos/logoFundoBrancoBiblioteca.png",
+      "src": "/images/logos/flavicon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/logos/logoFundoBrancoBiblioteca.png",
+      "src": "/images/logos/flavicon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/images/logos/logoFundoBrancoBiblioteca.png",
+      "src": "/images/logos/flavicon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/logos/logoFundoBrancoBiblioteca.png",
+      "src": "/images/logos/flavicon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
