--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react-easy-crop": "^5.5.6",
     "undici": "^7.18.2",
     "web-file-polyfill": "^1.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.1"
   }
 }
